--- a/01-first-azure-pipelines.yml
+++ b/01-first-azure-pipelines.yml
@@ -23,11 +23,23 @@ jobs:
     displayName: 'Run a multi-line script'
 
 - job: Job2
+  dependsOn: Job1
   steps:
   - script: echo Job2 Hello, world, changed!
     displayName: 'Run a one-line script'
 
   - script: |
       echo Job2 Add other tasks to build, test, and deploy your project.
+      echo See https://aka.ms/yaml
+    displayName: 'Run a multi-line script'
+
+- job: Job3
+  dependsOn: Job2
+  steps:
+  - script: echo Job3 Hello, world, changed!
+    displayName: 'Run a one-line script'
+
+  - script: |
+      echo Job3 Add other tasks to build, test, and deploy your project.
       echo See https://aka.ms/yaml
     displayName: 'Run a multi-line script'
