Adding variables at pipeline and stage levels - Fixed Typo

--- a/02-understanding-stages-azure-pipelines.yml
+++ b/02-understanding-stages-azure-pipelines.yml
@@ -15,7 +15,7 @@ stages:
   - job: Firstjob
     steps:
     - bash: echo Build FirstJob
-    - bash: echo $(PipelineLevelVarible)
+    - bash: echo $(PipelineLevelVariable)
   - job: SecondJob
     steps:
     - bash: echo Build SecondJob
