--- a/03-playing-with-environment-deployment.yml
+++ b/03-playing-with-environment-deployment.yml
@@ -39,4 +39,4 @@ stages:
       runOnce:
         deploy:
           steps:
-            - script: echo Deploy to QA
+            - script: echo Deploy to QA env
