--- a/02-kubernetes-ci-cd-pipeline.yml
+++ b/02-kubernetes-ci-cd-pipeline.yml
@@ -5,8 +5,7 @@ resources:
 - repo: self
 
 variables:
-  tag: 16
-  # '$(Build.BuildId)'
+  tag: '$(Build.BuildId)'
 
 # Stage 1 (Build Docker)
 # Build Docker Image
@@ -22,13 +21,13 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-    # - task: Docker@2
-    #   inputs:
-    #     containerRegistry: 'arifthayal-docker-hub'
-    #     repository: '8815/currency-exchange-devops'
-    #     command: 'buildAndPush'
-    #     Dockerfile: '**/Dockerfile'
-    #     tags: '$(tag)'
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'arifthayal-docker-hub'
+        repository: '8815/currency-exchange-devops'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
+        tags: '$(tag)'
 
     - task: CopyFiles@2
       inputs:
