--- a/03-aws-kubernetes-iaac-pipeline.yml
+++ b/03-aws-kubernetes-iaac-pipeline.yml
@@ -20,3 +20,10 @@ steps:
     backendServiceAWS: 'aws-for-terraform'
     backendAWSBucketName: 'df-test3'
     backendAWSKey: 'kubernetes-dev-tfstate'
+
+- task: TerraformTaskV1@0
+  inputs:
+    provider: 'aws'
+    command: 'apply'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/aws/kubernetes'
+    environmentServiceNameAWS: 'aws-for-terraform'
