--- a/04-aws-kubernetes-ci-cd-pipeline.yml
+++ b/04-aws-kubernetes-ci-cd-pipeline.yml
@@ -5,8 +5,8 @@ resources:
 - repo: self
 
 variables:
-  tag: 16
-  #  '$(Build.BuildId)'
+  tag: '$(Build.BuildId)'
+  # 16
 
 stages:
 
@@ -19,17 +19,17 @@ stages:
   displayName: Build image
   jobs:  
   - job: Build
-    displayName: Build
+    displayName: Build and Push an image
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-    # - task: Docker@2
-    #   inputs:
-    #     containerRegistry: 'arifthayal-docker-hub'
-    #     repository: '8815/currency-exchange-devops'
-    #     command: 'buildAndPush'
-    #     Dockerfile: '**/Dockerfile'
-    #     tags: '$(tag)'
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'arifthayal-docker-hub'
+        repository: '8815/currency-exchange-devops'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
+        tags: '$(tag)'
 
     - task: CopyFiles@2
       inputs:
